fix: tooltip looks bigger on safari

--- a/public/assets/styles/tooltip.scss
+++ b/public/assets/styles/tooltip.scss
@@ -8,7 +8,6 @@
   color: get("colors.white");
   font-size: 11px;
   padding: 4px 6px;
-  height: max-content;
   width: max-content;
   border-radius: 4px;
   position: absolute;
